update working directory