@@ -951,7 +951,6 @@ public class Editor extends MainContent implements Observer {
 		
 		actRunNS2 = new Action("Run NS2"){
 			public void run() {
-				actionSave();
 				styledTextConsole.setText("Running ... \n");
 				actionRunNS2();
 			}
@@ -1170,6 +1169,7 @@ public class Editor extends MainContent implements Observer {
 		tabFolder.setSelection(1);
 		if (ApplicationManager.openProject(editor) == null) return;		
 		showProject();		
+		System.setProperty("user.dir", Configure.getDirectory());
 		getWorkspace().getSelectableObject().get(getWorkspace().getSelectableObject().size() - 1).moveAbove(null);
 		updateNetworkInfoLabel();
 		updateNodeInfoLabel();
@@ -1575,16 +1575,22 @@ public class Editor extends MainContent implements Observer {
 	public void actionRunNS2() {
 		
 		saveScript();		
-		if (Configure.getNS2Path() == null)	ns2Config();	
-  		
-		final Display display = Display.getCurrent();
+		if (Configure.getNS2Path() == null)	ns2Config();
 		
+		
+		final Display display = Display.getCurrent();
 		new Thread(new Runnable() {			
 			@Override
 			public void run() {		
 				try 
-				{							
-					Process p = Runtime.getRuntime().exec(Configure.getNS2Path() + "/bin/ns " + Configure.getTclFile());
+				{		
+					Process p = null;
+					File pathToExecutable = new File( Configure.getNS2Path() + "/bin/ns" );
+					ProcessBuilder pb = new ProcessBuilder(pathToExecutable.getAbsolutePath(),Configure.getTclFile());
+					pb.directory(new File(Configure.getDirectory()).getAbsoluteFile());
+					pb.redirectErrorStream(true);
+					p = pb.start();
+					
 					
 					BufferedReader input = new BufferedReader(new InputStreamReader(p.getInputStream()));			
 					String line;
